--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <p>First name: <strong data-bind="text: firstName"></strong></p>
     <p>Last name: <strong data-bind="text: lastName"></strong></p>
-    <script src="/javascripts/knockoutjs/knockout-3.4.0.js" type="text/javascript"></script>
-    <script src="/javascripts/application.js" type="text/javascript"></script>
+    <script src="javascripts/libs/knockoutjs/knockout-3.4.0.js" type="text/javascript"></script>
+    <script src="javascripts/libs/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <script src="javascripts/application.js" type="text/javascript"></script>
 </body>
 
 </html>
