--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
+            <ul data-bind="foreach: resultSet">
+                <li data-bind="text: name"></li>
+            </ul>
             </div>
             <div class="col-md-9">
                 <div id="map"></div>
