Everything inside viewModel.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     </div>
     <script src="javascripts/libs/knockoutjs/knockout-3.4.0.js" type="text/javascript"></script>
     <script src="javascripts/libs/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo449F-wVfaVbN7PG9dG1ygJW2UoJHba0&signed_in=false&libraries=places&callback=initMap" async defer></script>
-    <script src="javascripts/application.js" type="text/javascript"></script>
+    <script src="javascripts/app.js" type="text/javascript"></script>
 </body>
 
 </html>
