--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <input type="text" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }">
+                <!-- <input type="text" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }">
                 <ul data-bind="foreach: displayList">
                     <li data-bind="text: name"></li>
-                </ul>
+                </ul> -->
             </div>
             <div class="col-md-9">
                 <div id="map"></div>
@@ -24,7 +24,9 @@
     </div>
     <script src="javascripts/libs/knockoutjs/knockout-3.4.0.js" type="text/javascript"></script>
     <script src="javascripts/libs/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="javascripts/app.js" type="text/javascript"></script>
+    <script src="javascripts/api.js" type="text/javascript"></script>
+    <script src="javascripts/jan15.js" type="text/javascript"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCo449F-wVfaVbN7PG9dG1ygJW2UoJHba0&callback=initMap" async defer></script> -->
 </body>
 
 </html>
