--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <!-- <input type="text" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }">
+                <!-- <input type="text" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }"> -->
                 <ul data-bind="foreach: displayList">
                     <li data-bind="text: name"></li>
-                </ul> -->
+                </ul>
             </div>
             <div class="col-md-9">
                 <div id="map"></div>
