--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Neighborhood Map</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
@@ -11,11 +12,21 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3">
-                <input type="text" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }">
-                <ul data-bind="foreach: displayList">
-                    <li data-bind="text: name"></li>
-                </ul>
+            <div id="leftNav" class="col-md-3">
+                <div id="heading">
+                    <h2>SF Restaurants</h2>
+                </div>
+                <hr>
+                <div id="leftNavFilterArea">
+                    <div id="search">
+                        <input type="text" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }" placeholder="Filter restaurants...">
+                    </div>
+                    <div id="list">
+                        <ul data-bind="foreach: displayList">
+                            <li data-bind="text: name"></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="col-md-9">
                 <div id="map"></div>
