Added .pin class for icon in li.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </div>
                     <div id="list">
                         <ul data-bind="foreach: displayList">
-                            <li data-bind="text: name"></li>
+                            <li class="pin" data-bind="text: name">  </li>
                         </ul>
                     </div>
                 </div>
