--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="javascripts/libs/knockoutjs/knockout-3.4.0.js" type="text/javascript"></script>
     <script src="javascripts/libs/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
     <script src="javascripts/api.js" type="text/javascript"></script>
-    <script src="javascripts/jan15.js" type="text/javascript"></script>
+    <script src="javascripts/app.js" type="text/javascript"></script>
 </body>
 
 </html>
