--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 
 <body>
@@ -35,9 +35,9 @@
     </div>
     <script src="javascripts/libs/knockoutjs/knockout-3.4.0.js" type="text/javascript"></script>
     <script src="javascripts/libs/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-    <script src="javascripts/api.js" type="text/javascript"></script>
-    <script src="javascripts/map.js" type="text/javascript"></script>
-    <script src="javascripts/viewmodel.js" type="text/javascript"></script>
+    <script src="javascripts/app.js" type="text/javascript"></script>
+    <!-- <script src="javascripts/map.js" type="text/javascript"></script>
+    <script src="javascripts/viewmodel.js" type="text/javascript"></script> -->
 </body>
 
 </html>
