--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,11 @@
     </div>
     <script src="javascripts/libs/knockoutjs/knockout-3.4.0.js" type="text/javascript"></script>
     <script src="javascripts/libs/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+    <!-- Prod Scripts -->
     <script src="javascripts/app.js" type="text/javascript"></script>
-    <!-- <script src="javascripts/map.js" type="text/javascript"></script>
+    <!-- Dev Scripts -->
+    <!-- <script src="javascripts/api.js" type="text/javascript"></script>
+    <script src="javascripts/map.js" type="text/javascript"></script>
     <script src="javascripts/viewmodel.js" type="text/javascript"></script> -->
 </body>
 
