--- a/src/index.html
+++ b/src/index.html
@@ -4,53 +4,72 @@
 <head>
     <title>Neighborhood Map</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:600' rel='stylesheet' type='text/css'>
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.min.css">
     <link rel="stylesheet" href="javascripts/libs/bootstrap-3.3.6-dist/css/bootstrap.min.css">
-</head>
-
-<body>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#">SF Restaurants</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">iOS</a></li>
-                    <li><a href="#">SVN</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-               Java 
-               <b class = "caret"></b>
-            </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">jmeter</a></li>
-                            <li><a href="#">EJB</a></li>
-                            <li><a href="#">Jasper Report</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <div id="map"></div>
     <script src="javascripts/libs/knockoutjs/knockout-3.4.0.js"></script>
     <script src="javascripts/libs/jquery/jquery-2.1.4.min.js"></script>
     <script src="javascripts/libs/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div id="leftNavMob" class="col-md-3">
+                <nav class="navbar navbar-default" role="navigation">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand">SF Restaurants</a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }" placeholder="Filter restaurants..." autofocus>
+                            </div>
+                        </form>
+                        <ul data-bind="foreach: displayList">
+                            <li class="pin" data-bind="text: name"> </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+            <div id="leftNav" class="col-md-3">
+                <div id="heading">
+                    <h2>SF Restaurants</h2>
+                </div>
+                <hr>
+                <div id="leftNavFilterArea">
+                    <div id="search">
+                        <input type="text" data-bind="value: keyword, valueUpdate: 'afterkeydown', event: { 'keyup': enterSearch }" placeholder="Filter restaurants..." autofocus>
+                    </div>
+                    <div id="list">
+                        <ul data-bind="foreach: displayList">
+                            <li class="pin" data-bind="text: name"> </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-9">
+                <div id="map"></div>
+            </div>
+        </div>
+    </div>
+    <script>
+    // Returns width of browser viewport
+    var wid = $(window).width();
+    if (wid >= 768) {
+        $("#leftNavMob").remove();
+    } else if (wid < 768) {
+        $("#leftNav").remove();
+    };
+    </script>
     <!-- Prod Scripts -->
     <script src="javascripts/app.js"></script>
     <!-- Dev Scripts -->
